--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-/* 
+/*
  * 이부분은 신경쓰시지 않으셔도 됩니다 :)
 */
 * {
@@ -148,4 +148,18 @@ body {
   width: 100%;
   padding: 10px;
   border: 1px solid #dfdfdf;
+}
+
+.header-container {
+  padding: 20px 0;
+  line-height: 1.5em;
+}
+
+.header-text {
+  font-size: 6rem;
+  font-weight: 600;
+  margin-bottom: 2rem;
+  line-height: 1em;
+  color: #ececec;
+  text-align: center;
 }
