--- a/src/App.css
+++ b/src/App.css
@@ -163,3 +163,79 @@ body {
   color: #ececec;
   text-align: center;
 }
+
+.alert-container {
+  min-width: 420px;
+  right: 0;
+  top: 10px;
+  display: flex;
+  align-items: center;
+  position: absolute;
+  padding: 20px 40px;
+  border-radius: 4px;
+  border-left: 8px solid red;
+  background-color: #ffbfbf;
+  overflow: hidden;
+}
+
+.alert-icon {
+  position: absolute;
+  left: 20px;
+  top: 50%;
+  transform: translateY(-50%);
+  color: red;
+  font-size: 30px;
+}
+
+.alert-message {
+  padding: 0 20px;
+  color: red;
+  font-size: 18px;
+}
+
+.alert-close-btn {
+  position: absolute;
+  right: 0px;
+  top: 50%;
+  transform: translateY(-50%);
+  padding: 22px 18px;
+  background-color: #ff9999;
+  cursor: pointer;
+}
+
+.alert-close-btn:hover {
+  background-color: #ff8080;
+}
+
+.alert-btn-icon {
+  display: flex;
+  color: red;
+  font-size: 22px;
+  line-height: 40px;
+}
+
+.alert-container.show {
+  animation: slide 1s ease forwards;
+}
+
+@keyframes slide {
+  0% {
+    transform: translateX(100%);
+  }
+
+  40% {
+    transform: translateX(-10%);
+  }
+
+  80% {
+    transform: translateX(0%);
+  }
+
+  80% {
+    transform: translateX(-10px);
+  }
+}
+
+.alert-container.hide {
+  display: none;
+}
