--- a/src/App.css
+++ b/src/App.css
@@ -248,3 +248,9 @@ body {
   position: absolute;
   background-color: rgba(0, 0, 0, 0.5);
 }
+
+.dropdown-result {
+  display: flex;
+  justify-content: center;
+  color: #ececec;
+}
