Fix: DropdownItem 클릭 시 배경색상 변경 조건문 추가

--- a/src/components/Dropdown/DropdownList/DropdownList.module.css
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.css
@@ -10,3 +10,10 @@
   z-index: 10;
   overflow: auto;
 }
+
+.more {
+  display: flex;
+  justify-content: center;
+  color: #7e7e7e;
+  font-size: 24px;
+}
