--- a/src/components/Dropdown/DropdownList/DropdownList.module.css
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.css
@@ -9,11 +9,31 @@
   color: #78e7d3;
   z-index: 10;
   overflow: auto;
+  transition: all 0.2s;
 }
 
-.more {
+.moreIcon {
   display: flex;
   justify-content: center;
   color: #7e7e7e;
   font-size: 24px;
+}
+
+.spinnerWrapper {
+  display: flex;
+  justify-content: center;
+}
+
+.spinner {
+  font-size: 20px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
