Fix: useDebounce 대신 lodash 사용하여 debounce 적용

--- a/src/components/Dropdown/DropdownList/DropdownList.module.css
+++ b/src/components/Dropdown/DropdownList/DropdownList.module.css
@@ -6,7 +6,7 @@
   border: 1px solid #ececec;
   border-radius: 6px;
   background-color: white;
-  color: #78e7d3;
+  color: #000000;
   z-index: 10;
   overflow: auto;
   transition: all 0.2s;
