--- a/src/components/Dropdown/DropdownItem/DropdownItem.module.css
+++ b/src/components/Dropdown/DropdownItem/DropdownItem.module.css
@@ -1,11 +1,11 @@
 .item {
-  padding: 8px;
+  padding: 6px 12px;
   transition: all 0.2s;
 }
 
 .item:hover {
   background-color: #f4f4f4;
-  border-radius: 4px;
+  border-radius: 3px;
   cursor: pointer;
 }
 
