Fix: DropdownItem 클릭 시 spinner icon 동작

--- a/src/components/Notification/Notification.module.css
+++ b/src/components/Notification/Notification.module.css
@@ -1,3 +1,9 @@
+.background {
+  position: relative;
+  height: 100%;
+  z-index: 10;
+}
+
 .container {
   right: 0;
   top: 10px;
@@ -75,10 +81,11 @@
 }
 
 .blur {
-  top: 0;
-  left: 0;
-  width: 100vw;
-  height: 100vh;
   position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.5);
 }
